// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget wrapper component should render a widget wrapper with a chart 1`] = `
<Provider
  store={
    Object {
      "asyncReducers": Object {
        "FormButtons": [Function],
        "miqCustomTabReducer": [Function],
        "notificationReducer": [Function],
      },
      "dispatch": [Function],
      "getState": [Function],
      "injectReducers": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <WidgetWrapper
    widgetButtons="[{\\"id\\":\\"w_1_close\\",\\"title\\":\\"Remove from Dashboard\\",\\"name\\":\\"Remove Widget\\",\\"confirm\\":\\"Are you sure you want to remove 'Guest OS Information'from the Dashboard?\\",\\"dataRemote\\":true,\\"sparkleOn\\":true,\\"href\\":\\"/dashboard/widget_close?widget=1\\",\\"fonticon\\":\\"fa fa-times fa-fw\\",\\"dataMethod\\":\\"post\\"},{\\"id\\":\\"w_1_minmax\\",\\"title\\":\\"Minimize\\",\\"name\\":\\"Minimize\\",\\"confirm\\":false,\\"dataRemote\\":true,\\"href\\":\\"/dashboard/widget_toggle_minmax?widget=1\\",\\"fonticon\\":\\"fa fa-caret-square-o-up fa-fw\\",\\"dataMethod\\":\\"post\\"},{\\"id\\":\\"w_1_fullscreen\\",\\"title\\":\\"Open the chart and full report in a new window\\",\\"name\\":\\"Full Screen\\",\\"confirm\\":\\"This will show the chart and the entire report (all rows) in your browser. Do you want to proceed?\\",\\"href\\":\\"/dashboard/report_only?rr_id=12686&type=hybrid\\",\\"fonticon\\":\\"fa fa-arrows-alt fa-fw\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\"},{\\"id\\":\\"w_1_pdf\\",\\"title\\":\\"Print the full report (all rows) or export it as a PDF file\\",\\"name\\":\\"Print or export to PDF\\",\\"href\\":\\"/dashboard/widget_to_pdf?rr_id=12686\\",\\"fonticon\\":\\"pficon pficon-print fa-fw\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\"},{\\"id\\":\\"w_1_zoom\\",\\"title\\":\\"Zoom in on this chart\\",\\"name\\":\\"Zoom in\\",\\"href\\":\\"/dashboard/widget_zoom?widget=1\\",\\"fonticon\\":\\"fa fa-plus fa-fw\\",\\"dataRemote\\":true,\\"sparkleOn\\":true,\\"dataMethod\\":\\"post\\"},{\\"id\\":\\"w_1_refresh\\",\\"title\\":\\"Refresh this Widget\\",\\"name\\":\\"Refresh\\",\\"fonticon\\":\\"fa fa-refresh fa-fw\\",\\"refresh\\":true}]"
    widgetId={1}
    widgetLastRun="April 06, 2019 12:00"
    widgetNextRun="March 07, 2022 01:00"
    widgetTitle="Guest OS Information"
    widgetType="chart"
  >
    <div
      className="card-pf card-pf-view"
    >
      <div
        className="card-pf-body"
      >
        <div
          className="card-pf-heading-kebab"
        >
          <OverflowMenu
            aria-labelledby="widget-title-1"
            className="widget-overflow-menu"
            flipped={true}
            id="1-menu"
            onOpen={[Function]}
          >
            <ForwardRef
              aria-labelledby="widget-title-1"
              className="widget-overflow-menu"
              flipped={true}
              id="1-menu"
              onOpen={[Function]}
            >
              <span
                className="cds--overflow-menu__wrapper"
              >
                <ForwardRef
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-labelledby="widget-title-1"
                  className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md"
                  id="1-menu"
                  kind="ghost"
                  label="Options"
                  onClick={[Function]}
                  size="md"
                  type="button"
                >
                  <ForwardRef
                    autoAlign={false}
                    className="cds--icon-tooltip"
                    closeOnActivation={true}
                    defaultOpen={false}
                    dropShadow={false}
                    enterDelayMs={100}
                    highContrast={true}
                    label="Options"
                    leaveDelayMs={100}
                  >
                    <Popover
                      align="top"
                      autoAlign={false}
                      className="cds--tooltip cds--icon-tooltip"
                      dropShadow={false}
                      highContrast={true}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      open={false}
                    >
                      <span
                        className="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
                        onKeyDown={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="cds--tooltip-trigger__wrapper"
                        >
                          <ForwardRef(ButtonBase)
                            aria-expanded={false}
                            aria-haspopup={true}
                            aria-labelledby="widget-title-1"
                            className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md"
                            hasIconOnly={true}
                            id="1-menu"
                            kind="ghost"
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onTouchStart={[Function]}
                            size="md"
                            type="button"
                          >
                            <button
                              aria-expanded={false}
                              aria-haspopup={true}
                              aria-labelledby="widget-title-1"
                              className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                              disabled={false}
                              id="1-menu"
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <ForwardRef(OverflowMenuVertical)
                                aria-label="Options"
                                className="cds--overflow-menu__icon"
                              >
                                <Icon
                                  aria-label="Options"
                                  className="cds--overflow-menu__icon"
                                  fill="currentColor"
                                  height={16}
                                  viewBox="0 0 32 32"
                                  width={16}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    aria-label="Options"
                                    className="cds--overflow-menu__icon"
                                    fill="currentColor"
                                    focusable="false"
                                    height={16}
                                    preserveAspectRatio="xMidYMid meet"
                                    role="img"
                                    viewBox="0 0 32 32"
                                    width={16}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <circle
                                      cx="16"
                                      cy="8"
                                      r="2"
                                    />
                                    <circle
                                      cx="16"
                                      cy="16"
                                      r="2"
                                    />
                                    <circle
                                      cx="16"
                                      cy="24"
                                      r="2"
                                    />
                                  </svg>
                                </Icon>
                              </ForwardRef(OverflowMenuVertical)>
                            </button>
                          </ForwardRef(ButtonBase)>
                        </div>
                        <PopoverContent
                          aria-hidden="true"
                          className="cds--tooltip-content"
                          id="tooltip-8"
                          onMouseEnter={[Function]}
                          role="tooltip"
                        >
                          <span
                            aria-hidden="true"
                            className="cds--popover"
                            id="tooltip-8"
                            onMouseEnter={[Function]}
                            role="tooltip"
                          >
                            <span
                              className="cds--popover-content cds--tooltip-content"
                            >
                              Options
                            </span>
                            <span
                              className="cds--popover-caret"
                            />
                          </span>
                        </PopoverContent>
                      </span>
                    </Popover>
                  </ForwardRef>
                </ForwardRef>
              </span>
            </ForwardRef>
          </OverflowMenu>
          <div
            className="card-pf-title sortable-handle ui-sortable-handle"
          >
            <span
              id="widget-title-1"
            >
              Guest OS Information
            </span>
          </div>
        </div>
      </div>
      <div
        id="dd_w1_box"
      >
        <div
          className="loadingSpinner"
        >
          <Loading
            className="export-spinner"
            small={true}
            withOverlay={false}
          >
            <div
              aria-atomic="true"
              aria-live="assertive"
              className="export-spinner cds--loading cds--loading--small"
            >
              <svg
                className="cds--loading__svg"
                viewBox="0 0 100 100"
              >
                <title>
                  loading
                </title>
                <circle
                  className="cds--loading__background"
                  cx="50%"
                  cy="50%"
                  r="42"
                />
                <circle
                  className="cds--loading__stroke"
                  cx="50%"
                  cy="50%"
                  r="42"
                />
              </svg>
            </div>
          </Loading>
        </div>
      </div>
    </div>
  </WidgetWrapper>
</Provider>
`;

exports[`Widget wrapper component should render a widget wrapper with a menu 1`] = `
<Provider
  store={
    Object {
      "asyncReducers": Object {
        "FormButtons": [Function],
        "miqCustomTabReducer": [Function],
        "notificationReducer": [Function],
      },
      "dispatch": [Function],
      "getState": [Function],
      "injectReducers": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <WidgetWrapper
    widgetButtons="[{\\"id\\":\\"w_83_close\\",\\"title\\":\\"Remove from Dashboard\\",\\"name\\":\\"Remove Widget\\",\\"confirm\\":\\"Are you sure you want to remove 'Links'from the Dashboard?\\",\\"dataRemote\\":true,\\"sparkleOn\\":true,\\"href\\":\\"/dashboard/widget_close?widget=83\\",\\"fonticon\\":\\"fa fa-times fa-fw\\",\\"dataMethod\\":\\"post\\"},{\\"id\\":\\"w_83_minmax\\",\\"title\\":\\"Minimize\\",\\"name\\":\\"Minimize\\",\\"confirm\\":false,\\"dataRemote\\":true,\\"href\\":\\"/dashboard/widget_toggle_minmax?widget=83\\",\\"fonticon\\":\\"fa fa-caret-square-o-up fa-fw\\",\\"dataMethod\\":\\"post\\"}]"
    widgetId={83}
    widgetLastRun="March 04, 2022 03:55"
    widgetNextRun="March 07, 2022 01:00"
    widgetTitle="Links"
    widgetType="menu"
  >
    <div
      className="card-pf card-pf-view"
    >
      <div
        className="card-pf-body"
      >
        <div
          className="card-pf-heading-kebab"
        >
          <OverflowMenu
            aria-labelledby="widget-title-83"
            className="widget-overflow-menu"
            flipped={true}
            id="83-menu"
            onOpen={[Function]}
          >
            <ForwardRef
              aria-labelledby="widget-title-83"
              className="widget-overflow-menu"
              flipped={true}
              id="83-menu"
              onOpen={[Function]}
            >
              <span
                className="cds--overflow-menu__wrapper"
              >
                <ForwardRef
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-labelledby="widget-title-83"
                  className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md"
                  id="83-menu"
                  kind="ghost"
                  label="Options"
                  onClick={[Function]}
                  size="md"
                  type="button"
                >
                  <ForwardRef
                    autoAlign={false}
                    className="cds--icon-tooltip"
                    closeOnActivation={true}
                    defaultOpen={false}
                    dropShadow={false}
                    enterDelayMs={100}
                    highContrast={true}
                    label="Options"
                    leaveDelayMs={100}
                  >
                    <Popover
                      align="top"
                      autoAlign={false}
                      className="cds--tooltip cds--icon-tooltip"
                      dropShadow={false}
                      highContrast={true}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      open={false}
                    >
                      <span
                        className="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
                        onKeyDown={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="cds--tooltip-trigger__wrapper"
                        >
                          <ForwardRef(ButtonBase)
                            aria-expanded={false}
                            aria-haspopup={true}
                            aria-labelledby="widget-title-83"
                            className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md"
                            hasIconOnly={true}
                            id="83-menu"
                            kind="ghost"
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onTouchStart={[Function]}
                            size="md"
                            type="button"
                          >
                            <button
                              aria-expanded={false}
                              aria-haspopup={true}
                              aria-labelledby="widget-title-83"
                              className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                              disabled={false}
                              id="83-menu"
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <ForwardRef(OverflowMenuVertical)
                                aria-label="Options"
                                className="cds--overflow-menu__icon"
                              >
                                <Icon
                                  aria-label="Options"
                                  className="cds--overflow-menu__icon"
                                  fill="currentColor"
                                  height={16}
                                  viewBox="0 0 32 32"
                                  width={16}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    aria-label="Options"
                                    className="cds--overflow-menu__icon"
                                    fill="currentColor"
                                    focusable="false"
                                    height={16}
                                    preserveAspectRatio="xMidYMid meet"
                                    role="img"
                                    viewBox="0 0 32 32"
                                    width={16}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <circle
                                      cx="16"
                                      cy="8"
                                      r="2"
                                    />
                                    <circle
                                      cx="16"
                                      cy="16"
                                      r="2"
                                    />
                                    <circle
                                      cx="16"
                                      cy="24"
                                      r="2"
                                    />
                                  </svg>
                                </Icon>
                              </ForwardRef(OverflowMenuVertical)>
                            </button>
                          </ForwardRef(ButtonBase)>
                        </div>
                        <PopoverContent
                          aria-hidden="true"
                          className="cds--tooltip-content"
                          id="tooltip-5"
                          onMouseEnter={[Function]}
                          role="tooltip"
                        >
                          <span
                            aria-hidden="true"
                            className="cds--popover"
                            id="tooltip-5"
                            onMouseEnter={[Function]}
                            role="tooltip"
                          >
                            <span
                              className="cds--popover-content cds--tooltip-content"
                            >
                              Options
                            </span>
                            <span
                              className="cds--popover-caret"
                            />
                          </span>
                        </PopoverContent>
                      </span>
                    </Popover>
                  </ForwardRef>
                </ForwardRef>
              </span>
            </ForwardRef>
          </OverflowMenu>
          <div
            className="card-pf-title sortable-handle ui-sortable-handle"
          >
            <span
              id="widget-title-83"
            >
              Links
            </span>
          </div>
        </div>
      </div>
      <div
        id="dd_w83_box"
      >
        <div
          className="loadingSpinner"
        >
          <Loading
            className="export-spinner"
            small={true}
            withOverlay={false}
          >
            <div
              aria-atomic="true"
              aria-live="assertive"
              className="export-spinner cds--loading cds--loading--small"
            >
              <svg
                className="cds--loading__svg"
                viewBox="0 0 100 100"
              >
                <title>
                  loading
                </title>
                <circle
                  className="cds--loading__background"
                  cx="50%"
                  cy="50%"
                  r="42"
                />
                <circle
                  className="cds--loading__stroke"
                  cx="50%"
                  cy="50%"
                  r="42"
                />
              </svg>
            </div>
          </Loading>
        </div>
      </div>
    </div>
  </WidgetWrapper>
</Provider>
`;

exports[`Widget wrapper component should render a widget wrapper with a report 1`] = `
<Provider
  store={
    Object {
      "asyncReducers": Object {
        "FormButtons": [Function],
        "miqCustomTabReducer": [Function],
        "notificationReducer": [Function],
      },
      "dispatch": [Function],
      "getState": [Function],
      "injectReducers": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <WidgetWrapper
    widgetButtons="[{\\"id\\":\\"w_19_close\\",\\"title\\":\\"Remove from Dashboard\\",\\"name\\":\\"Remove Widget\\",\\"confirm\\":\\"Are you sure you want to remove 'EVM: Recently Discovered Hosts'from the Dashboard?\\",\\"dataRemote\\":true,\\"sparkleOn\\":true,\\"href\\":\\"/dashboard/widget_close?widget=19\\",\\"fonticon\\":\\"fa fa-times fa-fw\\",\\"dataMethod\\":\\"post\\"},{\\"id\\":\\"w_19_minmax\\",\\"title\\":\\"Minimize\\",\\"name\\":\\"Minimize\\",\\"confirm\\":false,\\"dataRemote\\":true,\\"href\\":\\"/dashboard/widget_toggle_minmax?widget=19\\",\\"fonticon\\":\\"fa fa-caret-square-o-up fa-fw\\",\\"dataMethod\\":\\"post\\"},{\\"id\\":\\"w_19_fullscreen\\",\\"title\\":\\"Open the full report in a new window\\",\\"name\\":\\"Full Screen\\",\\"confirm\\":\\"This will show the entire report (all rows) in your browser. Do you want to proceed?\\",\\"href\\":\\"/dashboard/report_only?rr_id=19618&type=tabular\\",\\"fonticon\\":\\"fa fa-arrows-alt fa-fw\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\"},{\\"id\\":\\"w_19_pdf\\",\\"title\\":\\"Print the full report (all rows) or export it as a PDF file\\",\\"name\\":\\"Print or export to PDF\\",\\"href\\":\\"/dashboard/widget_to_pdf?rr_id=19618\\",\\"fonticon\\":\\"pficon pficon-print fa-fw\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\"},{\\"id\\":\\"w_19_refresh\\",\\"title\\":\\"Refresh this Widget\\",\\"name\\":\\"Refresh\\",\\"fonticon\\":\\"fa fa-refresh fa-fw\\",\\"refresh\\":true}]"
    widgetId={19}
    widgetLastRun="March 04, 2022 03:55"
    widgetNextRun="March 07, 2022 01:00"
    widgetTitle="EVM: Recently Discovered Hosts"
    widgetType="report"
  >
    <div
      className="card-pf card-pf-view"
    >
      <div
        className="card-pf-body"
      >
        <div
          className="card-pf-heading-kebab"
        >
          <OverflowMenu
            aria-labelledby="widget-title-19"
            className="widget-overflow-menu"
            flipped={true}
            id="19-menu"
            onOpen={[Function]}
          >
            <ForwardRef
              aria-labelledby="widget-title-19"
              className="widget-overflow-menu"
              flipped={true}
              id="19-menu"
              onOpen={[Function]}
            >
              <span
                className="cds--overflow-menu__wrapper"
              >
                <ForwardRef
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-labelledby="widget-title-19"
                  className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md"
                  id="19-menu"
                  kind="ghost"
                  label="Options"
                  onClick={[Function]}
                  size="md"
                  type="button"
                >
                  <ForwardRef
                    autoAlign={false}
                    className="cds--icon-tooltip"
                    closeOnActivation={true}
                    defaultOpen={false}
                    dropShadow={false}
                    enterDelayMs={100}
                    highContrast={true}
                    label="Options"
                    leaveDelayMs={100}
                  >
                    <Popover
                      align="top"
                      autoAlign={false}
                      className="cds--tooltip cds--icon-tooltip"
                      dropShadow={false}
                      highContrast={true}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      open={false}
                    >
                      <span
                        className="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
                        onKeyDown={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="cds--tooltip-trigger__wrapper"
                        >
                          <ForwardRef(ButtonBase)
                            aria-expanded={false}
                            aria-haspopup={true}
                            aria-labelledby="widget-title-19"
                            className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md"
                            hasIconOnly={true}
                            id="19-menu"
                            kind="ghost"
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseMove={[Function]}
                            onTouchStart={[Function]}
                            size="md"
                            type="button"
                          >
                            <button
                              aria-expanded={false}
                              aria-haspopup={true}
                              aria-labelledby="widget-title-19"
                              className="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                              disabled={false}
                              id="19-menu"
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onMouseMove={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              <ForwardRef(OverflowMenuVertical)
                                aria-label="Options"
                                className="cds--overflow-menu__icon"
                              >
                                <Icon
                                  aria-label="Options"
                                  className="cds--overflow-menu__icon"
                                  fill="currentColor"
                                  height={16}
                                  viewBox="0 0 32 32"
                                  width={16}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    aria-label="Options"
                                    className="cds--overflow-menu__icon"
                                    fill="currentColor"
                                    focusable="false"
                                    height={16}
                                    preserveAspectRatio="xMidYMid meet"
                                    role="img"
                                    viewBox="0 0 32 32"
                                    width={16}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <circle
                                      cx="16"
                                      cy="8"
                                      r="2"
                                    />
                                    <circle
                                      cx="16"
                                      cy="16"
                                      r="2"
                                    />
                                    <circle
                                      cx="16"
                                      cy="24"
                                      r="2"
                                    />
                                  </svg>
                                </Icon>
                              </ForwardRef(OverflowMenuVertical)>
                            </button>
                          </ForwardRef(ButtonBase)>
                        </div>
                        <PopoverContent
                          aria-hidden="true"
                          className="cds--tooltip-content"
                          id="tooltip-2"
                          onMouseEnter={[Function]}
                          role="tooltip"
                        >
                          <span
                            aria-hidden="true"
                            className="cds--popover"
                            id="tooltip-2"
                            onMouseEnter={[Function]}
                            role="tooltip"
                          >
                            <span
                              className="cds--popover-content cds--tooltip-content"
                            >
                              Options
                            </span>
                            <span
                              className="cds--popover-caret"
                            />
                          </span>
                        </PopoverContent>
                      </span>
                    </Popover>
                  </ForwardRef>
                </ForwardRef>
              </span>
            </ForwardRef>
          </OverflowMenu>
          <div
            className="card-pf-title sortable-handle ui-sortable-handle"
          >
            <span
              id="widget-title-19"
            >
              EVM: Recently Discovered Hosts
            </span>
          </div>
        </div>
      </div>
      <div
        id="dd_w19_box"
      >
        <div
          className="loadingSpinner"
        >
          <Loading
            className="export-spinner"
            small={true}
            withOverlay={false}
          >
            <div
              aria-atomic="true"
              aria-live="assertive"
              className="export-spinner cds--loading cds--loading--small"
            >
              <svg
                className="cds--loading__svg"
                viewBox="0 0 100 100"
              >
                <title>
                  loading
                </title>
                <circle
                  className="cds--loading__background"
                  cx="50%"
                  cy="50%"
                  r="42"
                />
                <circle
                  className="cds--loading__stroke"
                  cx="50%"
                  cy="50%"
                  r="42"
                />
              </svg>
            </div>
          </Loading>
        </div>
      </div>
    </div>
  </WidgetWrapper>
</Provider>
`;
